<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/note_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@android:color/darker_gray"
                android:cropToPadding="true"
                android:layout_margin="4dp"
                android:scaleType="centerInside"/>

            <ImageButton
                android:id="@+id/note_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>

            <CheckBox
                android:id="@+id/note_important"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_important_label"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_title_label"/>

            <EditText
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note_title_hint"/>

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/note_details_label"/>

            <Button
                android:id="@+id/note_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/note_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/note_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_summary_text"/>

        </LinearLayout>
    </LinearLayout>

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_description_label"/>

            <EditText
                android:id="@+id/note_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:hint="@string/note_description_hint"
                android:inputType="textMultiLine"
                android:minLines="10" />
</LinearLayout>